--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="2"
+    android:versionName="0.7"
     package="saiboten.no.synclistener" >
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -8,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/spotocracylogo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -24,7 +26,6 @@
         <activity
             android:name="saiboten.no.synclistener.MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Light.NoTitleBar">
 
             <intent-filter>
