Ok .. major restructure again. Currently not working.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,52 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="2"
-    android:versionName="0.7"
-    package="saiboten.no.synclistener" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="saiboten.no.synclistener"
+    android:versionCode="3"
+    android:versionName="0.75">
 
-    <uses-sdk android:minSdkVersion="18"
+    <uses-sdk
+        android:minSdkVersion="18"
         android:targetSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/spotocracylogo"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
-        <service android:name="saiboten.no.synclistener.MusicService">
+        android:name=".dagger.BaseApplication"
+    android:label="@string/app_name"
+        android:theme="@style/AppTheme">
+        <service android:name=".musicservice.MusicService">
             <intent-filter>
-                <action android:name="PAUSE"></action>
-                <action android:name="PLAY"></action>
-                <action android:name="RESUME"></action>
-                <action android:name="SEEK_POSITION"></action>
+                <action android:name="PAUSE" />
+                <action android:name="PLAY" />
+                <action android:name="RESUME" />
+                <action android:name="SEEK_POSITION" />
             </intent-filter>
         </service>
-        
+
         <activity
-            android:name="saiboten.no.synclistener.MainActivity"
+            android:name=".mainscreen.MainActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="callback"
+                    android:scheme="spotocracy" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.spotify.sdk.android.authentication.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".intro.SetupActivity"
+            android:label="@string/title_activity_setup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-
-                <data
-                    android:host="callback"
-                    android:scheme="spotocracy"/>
-            </intent-filter>
         </activity>
-
-        <activity
-            android:name="com.spotify.sdk.android.authentication.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".activity.BaseActivity"></activity>
     </application>
+
 </manifest>
