--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar' // NOTE: Version must match!
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar' // NOTE: Version must match!
-    compile "com.android.support:support-v4:18.0.+"
+    compile 'com.android.support:support-v4:20.0.+'
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    compile 'com.squareup.dagger:dagger-compiler:1.2.2'
+    compile 'org.apache.commons:commons-lang3:3.0'
+
 }
