--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20" // Note: this version should match the latest build-tools version
+    compileSdkVersion 23
+    buildToolsVersion "24.0.0 rc3" // Note: this version should match the latest build-tools version
     // that you installed in the SDK manager
 
     defaultConfig {
         applicationId "no.saiboten.synclistener"
-        minSdkVersion 14
-        targetSdkVersion 20
-        versionCode 2
+        minSdkVersion 21
+        targetSdkVersion 23
+        versionCode 3
         versionName "0.6"
     }
     buildTypes {
@@ -17,6 +17,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 }
 
@@ -31,9 +37,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar' // NOTE: Version must match!
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar' // NOTE: Version must match!
-    compile 'com.android.support:support-v4:20.0.+'
+
+    compile 'com.android.support:support-v4:23.0.+'
+    compile 'com.android.support:support-v13:23.0.+'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:design:23.0.+'
+
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile 'org.apache.commons:commons-lang3:3.0'
-
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-jackson:2.0.0-beta4'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
