--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="saiboten.no.synclistener"
+    android:theme="@style/MyMaterialTheme"
     android:versionCode="3"
     android:versionName="0.75">
 
@@ -14,11 +15,11 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".dagger.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/spotocracylogo"
-        android:name=".dagger.BaseApplication"
-    android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <service android:name=".musicservice.MusicService">
             <intent-filter>
                 <action android:name="PAUSE" />
@@ -31,7 +32,7 @@
         <activity
             android:name=".mainscreen.MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.NoTitleBar">
+            android:theme="@style/MyMaterialTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
