--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="saiboten.no.synclistener"
     android:theme="@style/MyMaterialTheme"
-    android:versionCode="3"
-    android:versionName="0.75">
+    android:versionCode="4"
+    android:versionName="0.8">
 
     <uses-sdk
         android:minSdkVersion="18"
@@ -26,12 +26,14 @@
                 <action android:name="PLAY" />
                 <action android:name="RESUME" />
                 <action android:name="SEEK_POSITION" />
+                <action android:name="PLAYINGSTATUS" />
             </intent-filter>
         </service>
 
         <activity
             android:name=".mainscreen.MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:theme="@style/MyMaterialTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
